Change to java 8