@@ -36,7 +36,7 @@ public class AirportController {
 	@GetMapping
 	public ResponseEntity<Airport[]> findByCity(@RequestParam(value = "city", defaultValue = "") String city,
 			@RequestParam(required = false) String query) {
-		RequestEntity<Void> request = RequestEntity.get("%s?city=%s&query=%s".formatted(URL, city, query))
+		RequestEntity<Void> request = RequestEntity.get(String.format("%s?city=%s&query=%s", URL, city, query))
 				.accept(MediaType.APPLICATION_JSON).build();
 		return restTemplate.exchange(request, Airport[].class);
 	}
