@@ -24,14 +24,14 @@ public class FlightController {
     // TODO: change request params to a HashMap
     //    allows us to change the request params in the flight-service without having to modify the params in the orchestrator
     public ResponseEntity<MultiHopFlight[]> getMultiHopFlts(@RequestParam(value="origin") String origin, @RequestParam(value="dest") String dest, @RequestParam(name = "date") String date) {
-        RequestEntity<Void> request = RequestEntity.get("%s/multihop?origin=%s&dest=%s&date=%s".formatted(URL, origin, dest, date))
+        RequestEntity<Void> request = RequestEntity.get(String.format("%s/multihop?origin=%s&dest=%s&date=%s", URL, origin, dest, date))
                 .accept(MediaType.APPLICATION_JSON).build();
         return restTemplate.exchange(request, MultiHopFlight[].class);
     }
 
     @GetMapping("")
     public ResponseEntity<Flight[]> getNonstopFlights(@RequestParam(value="origin") String origin, @RequestParam(value="dest") String dest, @RequestParam(name = "date") String date) {
-        RequestEntity<Void> request = RequestEntity.get("%s?origin=%s&dest=%s&date=%s".formatted(URL, origin, dest, date))
+        RequestEntity<Void> request = RequestEntity.get(String.format("%s?origin=%s&dest=%s&date=%s", URL, origin, dest, date))
                 .accept(MediaType.APPLICATION_JSON).build();
         return restTemplate.exchange(request, Flight[].class);
     }
